fails to create mix pdf