@@ -173,6 +173,10 @@
 					<includes>
 						<include>*Test*.java</include>
 					</includes>
+					<argLine>@{argLine} --add-exports
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-opens
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
